updated UI ,version 2

--- a/HomeAmbalance/app/src/main/res/layout/activity_about.xml
+++ b/HomeAmbalance/app/src/main/res/layout/activity_about.xml
@@ -4,7 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/about"
+    android:background="@drawable/grad_back"
+    android:layoutDirection="ltr"
     tools:context=".about">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_margin="35dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+    <com.balysv.materialripple.MaterialRippleLayout
+        style="@style/Ripple"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="left"
+        android:layout_margin="10dp"
+        android:shadowColor="#000000"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="4"
+        android:text="\nHOME AMBALANCE\nExpert System
+        \n\nVersion 2 \n\ntahaelshrif1@gmail.com"
+        android:textColor="#300202"
+        android:textSize="24sp"
+        android:textStyle="italic"
+         />
+    </com.balysv.materialripple.MaterialRippleLayout>
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
