--- a/HomeAmbalance/app/src/main/res/layout/activity_diabetes_type.xml
+++ b/HomeAmbalance/app/src/main/res/layout/activity_diabetes_type.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back"
+    android:background="@drawable/grad_back"
+    android:layoutDirection="ltr"
+
     tools:context=".Diabetes_type">
 
     <ScrollView
