--- a/HomeAmbalance/app/src/main/res/values/themes.xml
+++ b/HomeAmbalance/app/src/main/res/values/themes.xml
@@ -6,4 +6,9 @@
     </style>
 
     <style name="Theme.HomeAmbalaunce" parent="Base.Theme.HomeAmbalaunce" />
+    <style name="Ripple">
+        <item name="mrl_rippleColor">#4E0A45</item>
+        <item name="mrl_rippleAlpha">.2</item>
+        <item name="mrl_rippleOverlay">true</item>
+    </style>
 </resources>
